# organon

./: .gitignore  AGENT-TEMPLATE.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Introduction.md  LICENSE  README.md  SKILLS.md  VAK_3.20  advanced-inference-engine.ts  dialectical-movement-demo.ts  eslint.config.mjs  force-hlo.md  gdsl.txt  generate_ysa_actuality.ts  generate_ysa_appearance_reflection.ts  generate_ysa_reflection.ts  generate_ysa_translations.ts  generate_ysa_workbooks.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  premium-test-config.ts  tsconfig.base.json  tsconfig.json  tsconfig.src.json  tsconfig.test.json  two-fold-unconditioned.ts  update_terminology.ts
gds/: Cargo.toml  package.json  tsconfig.json  vitest.config.ts
gds/Doctrine/: ALIGNMENT-GAPS.md  FOUNDING-CHARTER.md  INDEX.md  PHASE-1-STATUS.md  PRINCIPLE-FOUNDATION.md  README.md
gds/Doctrine/EXEMPLARS/: 001-frame-dsl.md  002-corpus-readers.md  003-tree-structures.md  004-featstruct-model.md  005-compile-ir.md  006-gdsl-absolute-concept.md  007-applications-expository.md  008-stdlib-resources.md  009-json-semantic-form.md  010-xml-html-semantic-form.md  011-dataframe-macros-reflection.md  012-select-filter-principle.md  013-series-concept-surface.md  014-expr-pipeline-judgment.md  015-order-group-syllogism.md  016-join-operations-inference.md  017-streaming-dataset-procedure.md  018-streaming-lazy-deferred.md  019-expr-basic-judgment-grammar.md  020-framing-chunking-pureform.md  021-array-namespace-observation.md  022-list-namespace-observation.md  023-string-namespace-observation.md  024-catalog-extension-persistence.md  025-graphframe-catalog-write.md  026-semantic-meta-pipeline.md  027-model-feature-plan-middle.md  028-dataframe-intuition.md  029-shell-compute-protocol.md  030-ideal-dataframe-dsl.md  TEMPLATE.md
gds/doc/: ABSOLUTE-FORM-ARCHITECTURE.md  ABSOLUTE-FORMPROCESSOR-RELATIVE-FORMPROCESSOR-DOCTRINE.md  ABSOLUTE-SCIENCE-PRINCIPLE.md  ABSTRACT.md  ADR-2026-02-10-RUSTSCRIPT-DSL-MATRIX.md  ADR-2026-04-15-REFLECTION-AS-META-CONTROL.md  ADR-2026-04-15-TERM-LOGIC-TRIADIC-COMPOSITION.md  ADR-2026-04-24-KERNEL-NON-REFLECTIVE-AGENTIAL-REFLECTIVE.md  ADR-2026-05-18-THE-APPEARANCE-OPERATOR-CONVOLUTION.md  AGENT_MIND_EXTENSION_SPEC.md  ALGORITHMS-MACHINERY-CONTROL-LOGIC-REVIEW.md  ALGORITHMS_UPGRADE_TRACKING.md  APPLICATIONS_CONTROL_LOGIC_INVENTORY.md  ARCHITECTURAL_FLOW_BFS_DFS.md  ARCHITECTURE.md  ARROW-CATALOG-LAYOUT.md  AUGMENTING-PLAIN-GNN-WITH-HEGELIAN-LOGIC.md  BOOLEAN-ALGEBRA-AS-CONCEPT-JUDGMENT-SYLLOGISM.md  BOOLEAN-INFERENCE-GENESIS.md  CENTRALITY-ARCHITECTURAL-REVIEW.md  CODEGEN_MACROS_GUIDE.md  COGNITION-INTUITION-CONCEPT.md  COLLECTIONS-FSSPEC-FOUNDATIONS.md  COLLECTIONS_SDK_MAP.md  COMMUNITY-ARCHITECTURAL-REVIEW.md  CONCEPT-JUDGMENT-AS-REAL-MECHANISM.md  CONCEPT-JUDGMENT-BEFORE-SYLLOGISM.md  CONFIG-AUDIT.md  CORE-REWRITE-BLUEPRINT.md  CORE_ALGO_POLISH_CHECKLIST.md  DATAOPS_DATAEXPRS_NOTE.md  DATASET-SEMANTIC-MODEL-BUILDER-DOCTRINE.md  DATASET_CORPUS_REGISTRY.md  DATASET_NAMING.md  DATASET_SDK_BOUNDARIES.md  DATASET_TREE_DSL_DESIGN.md  DIALECTICAL-EVOLUTION-TS-LOGIC.md  ESSAY-LOGICAL-CONTROL-SYSTEM-OVER-GNN.md  ESTIMATION_COVERAGE.md  ESTIMATION_HANDLER_MATRIX.md  (+96 more)
gds/doc/adr/: 0001-master-control-protocol.md  0002-storage-model.md  0003-coregraphstore-mcp.md  0004-mcp-architecture.md  ADR-2026-04-26-SEMANTIC-DATASET-ARCHITECTURE.md
gds/examples/: INDEX.md  c.txt  collections.sh  collections_array_namespace_rustscript.rs  collections_catalog_extensible.rs  collections_catalog_polars_io.rs  collections_catalog_scan_select.rs  collections_chunking_rechunk.rs  collections_dataframe_intuition.rs  collections_dataframe_macros_expository.rs  collections_dataframe_multicolumn.rs  collections_dataset_compile_ir.rs  collections_dataset_corpus_readers.rs  collections_dataset_doctrinal_method.rs  collections_dataset_frame_dsl.rs  collections_dataset_gdsl_absolute_concept.rs  collections_dataset_json.rs  collections_dataset_stdlib.rs  collections_dataset_tree.rs  collections_dataset_xml_html.rs  collections_expr_basic.rs  collections_extensions_framing_chunking.rs  collections_gds_shell.rs  collections_graphframe_catalog_write.rs  collections_join_operations.rs  collections_list_namespace_rustscript.rs  collections_macros_select_columns.rs  collections_order_group_exprs.rs  collections_select_filter.rs  collections_selectors.rs  collections_semantic_meta_pipeline.rs  collections_semantic_specific_model.rs  collections_series_basic.rs  collections_series_expr_pipeline.rs  collections_streaming_dataset.rs  collections_streaming_lazy.rs  collections_string_namespace_rustscript.rs  dataframe.sh  dataframe_concatenations.rs  dataframe_expr_basic.rs  (+84 more)
gds/examples.old/: collections_dataframe_multicolumn.rs  collections_dataset_applications_expository.rs  collections_dataset_compile_ir.rs  collections_dataset_corpus_readers.rs  collections_dataset_doctrinal_method.rs  collections_dataset_featstruct_model.rs  collections_dataset_json.rs  collections_dataset_tree.rs  collections_expr_basic.rs  collections_extensions_framing_chunking.rs  collections_gds_shell.rs  collections_graphframe_catalog_write.rs  collections_join_operations.rs  collections_model_feature_plan.rs  collections_select_filter.rs  collections_selectors.rs  collections_series_expr_pipeline.rs  collections_string_namespace_rustscript.rs  ml_core_functions_walkthrough.rs  ml_core_tensor_walkthrough.rs  ml_metrics_walkthrough.rs  ml_nlp_tree_demo.rs  ml_pipeline_unknown_step_fails.rs
gds/fixtures/gdsl/: absolute-concept-scientific-inference.expected.json  absolute-concept-scientific-inference.gdsl
gds/src/: core.ts  dsl.rs  gds.d.ts  gds.d.ts.map  gds.js  gds.js.map  gds.ts  index.d.ts  index.js  index.js.map  index.ts  lib.rs  prints.rs
gds/src/algo/: mod.rs
gds/test/: core.test.ts  gds.test.ts  tsconfig.json  tsconfig.jsxxxn
gds/tests/: compare_mlp_logistic.rs  config_manager.rs  config_trait.rs  config_validations.rs  dataset_namespace_invariants.rs  dataset_tests.rs  projection_factory.rs  sdl_search_test.rs  shell_bridge.rs
(+8572 files in other folders)
