[package]
name = "gds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gds"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
# Node/N-API bindings are only needed when building the Node addon surface.
# Keeping them behind a feature avoids requiring a Node host runtime for
# ordinary Rust binaries/tests/examples.
napi = { version = "2", features = ["serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.51.0", features = [
    "dtype-u8",
    "dtype-u16",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "dtype-array",
    "dtype-decimal",
    "dtype-categorical",
    "dtype-struct",
    "object",
    "timezones",
    "strings",
    "concat_str",
    "range",
    "cov",
    "arg_where",
    "csv",
    "ipc",
    "lazy",
    "fmt",
    "json",
    "parquet",
    "partition_by",
    "temporal",
    "serde",
    "meta",
    "regex",
    "diff",
    "is_in",
    "list_any_all",
    "list_drop_nulls",
    "list_sample",
    "list_gather",
    "list_to_struct",
    "list_count",
    "list_sets",
    "list_eval",
    "array_any_all",
    "array_count",
    "array_to_struct",
    "abs",
] }
polars-io = { version = "0.51.0", features = ["json"] }
polars-lazy = { version = "0.51.0", features = ["json"] }
polars-plan = { version = "0.51.0", features = ["abs"] }
polars-parquet = "0.51.0"
arrow = { package = "polars-arrow", version = "0.51.0" }
memmap2 = "0.5"
arrow2 = { version = "0.18", features = ["io_ipc", "io_parquet", "io_parquet_compression"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.11"
hdrhistogram = "7.5" # Histogram data structure for statistics
paste = "1.0" # Token pasting for macro generation (builder names, etc.)
anyhow = "1.0"
bincode = "1.3"
derive_more = "0.99"
derive_builder = "0.12"
log = "0.4.28"
dyn-clone = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
regex = "1.10"

[build-dependencies]
napi-build = "2"

[features]
default = [
    "arrow",
    "rayon",
    "serde",
    "procedures",
    "ml",
    "dtype-array",
    "dtype-decimal",
    "dtype-u8",
    "dtype-u16",
    "object",
]
node = ["dep:napi", "dep:napi-derive"]
full = ["default", "node"]
arrow = []
serde = []      # Enables config serialization (serde already in deps)
rayon = []      # Parallel computation support
procedures = [] # Procedure execution system
ml = []         # Machine learning features
new_streaming = [] # Polars lazy streaming engine support
dtype-array = []   # Polars dtype array support
dtype-decimal = [] # Polars decimal dtype support
dtype-u8 = ["polars/dtype-u8"]   # Polars UInt8 support
dtype-u16 = ["polars/dtype-u16"] # Polars UInt16 support
object = []        # Polars object dtype support
