[package]
name = "gds"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "gds"
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
# Node/N-API bindings are only needed when building the Node addon surface.
# Keeping them behind a feature avoids requiring a Node host runtime for
# ordinary Rust binaries/tests/examples.
napi = { version = "2", features = ["serde-json"], optional = true }
napi-derive = { version = "2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
uuid = { version = "1", features = ["v4"] }
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.52.0", features = [
    "dtype-array",
    "dtype-decimal",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "dtype-duration",
    "dtype-i8",
    "dtype-i16",
    "dtype-i128",
    "dtype-u8",
    "dtype-u16",
    "dtype-u128",
    "dtype-categorical",
    "dtype-struct",
    "regex",
    "timezones",
    "temporal",
    "strings",
    "string_pad",
    "string_to_integer",
    "object",
    "serde",
    "serde-lazy",
    "parquet",
    "json",
    "ipc",
    "is_in",
    "zip_with",
    "round_series",
    "repeat_by",
    "is_first_distinct",
    "is_last_distinct",
    "checked_arithmetic",
    "dot_product",
    "concat_str",
    "reinterpret",
    "take_opt_iter",
    "mode",
    "cum_agg",
    "rolling_window",
    "interpolate",
    "extract_jsonpath",
    "list_gather",
    "rank",
    "moment",
    "ewma",
    "abs",
    "range",
    "product",
    "diff",
    "pct_change",
    "unique_counts",
    "log",
    "list_to_struct",
    "list_count",
    "list_eval",
    "cumulative_eval",
    "arg_where",
    "search_sorted",
    "offset_by",
    "trigonometry",
    "sign",
    "propagate_nans",
    "fmt",
    #
    "month_end",
    "month_start",
    "business",
    "cov",
    "lazy",
    "meta",
    "partition_by",
    "list_any_all",
    "list_drop_nulls",
    "list_sample",
    "list_sets",
    "array_any_all",
    "array_count",
    "array_to_struct",
    "binary_encoding",
    "asof_join",
] }
polars-io = { version = "0.52.0" }
polars-lazy = { version = "0.52.0" }
polars-plan = { version = "0.52.0" }
polars-parquet = { version = "0.52.0" }
polars-ops = { version = "0.52.0", features = ["pivot", "to_dummies", "asof_join"] }
arrow = { package = "polars-arrow", version = "0.52.0" }
memmap2 = "0.5"
arrow2 = { version = "0.18", features = ["io_ipc", "io_parquet", "io_parquet_compression"] }
rand = { version = "0.8", features = ["std", "std_rng"] }
rand_chacha = "0.3"
num_cpus = "1.16"
parking_lot = "0.12"
rayon = "1.11"
hdrhistogram = "7.5" # Histogram data structure for statistics
paste = "1.0" # Token pasting for macro generation (builder names, etc.)
anyhow = "1.0"
bincode = "1.3"
derive_more = "0.99"
derive_builder = "0.12"
log = "0.4.28"
dyn-clone = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
regex = "1.10"
either = "1.10"

[build-dependencies]
napi-build = "2"

[features]
default = ["dataset", "graphframe"]
node = ["dep:napi", "dep:napi-derive"]
full = ["node"]

# Experimental feature: enable GraphFrame (Polars-backed graph tables).
# Keep this opt-in to avoid pulling experimental APIs into stable builds.
graphframe = []

# Experimental feature: enable Dataset APIs (Polars-backed dataset DSL).
# Gate at the top-level so internals are unchanged, but the module is opt-in.
dataset = []
